<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.search.SearchFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_productos"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="28dp"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/gray_300"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@null"
                app:queryHint="Buscar en mercado libre..."
                app:iconifiedByDefault="false"
                app:searchIcon="@drawable/ic_search"
                app:queryBackground="@null"
                style="@style/SingleLineSearchView"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categor_as_populares"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@id/searchLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/categoriesGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:columnCount="2"
            app:rowCount="2"
            app:useDefaultMargins="true"
            app:alignmentMode="alignMargins"
            app:layout_constraintTop_toBottomOf="@id/tvCategories">

            <!-- Categorías -->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buttonElectronics"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/electronic"
                app:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/electr_nicos"
                    android:textStyle="bold"
                    android:textColor="@color/electronicategory"
                    android:textAlignment="center" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buttonClothing"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/clothing"
                app:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/ropa"
                    android:textStyle="bold"
                    android:textColor="@color/clothingcategory"
                    android:textAlignment="center" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buttonHome"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/homeCategory"
                app:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/hogar_muebles"
                    android:textStyle="bold"
                    android:textColor="@color/homeCategoryColor"
                    android:textAlignment="center" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buttonSports"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/sports"
                app:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/deportes_y_fitness"
                    android:textStyle="bold"
                    android:textColor="@color/sportscategory"
                    android:textAlignment="center" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/tvRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/b_squedas_recientes"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/categoriesGrid"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/recentSearchesChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvRecent"/>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/searchLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/errorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/searchLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reintentar"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/errorView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

